[gd_scene load_steps=6 format=3 uid="uid://bwc8spn85vcu7"]

[ext_resource type="Script" path="res://scripts/inventory_item.gd" id="1_4kxu1"]
[ext_resource type="Texture2D" uid="uid://d1lfchl0rebiw" path="res://textures/items/cooked_chicken.png" id="2_cpvyn"]
[ext_resource type="Texture2D" uid="uid://31u0uhyyrady" path="res://textures/drop_item.png" id="3_peubr"]
[ext_resource type="Texture2D" uid="uid://d4etukwn03d3v" path="res://textures/equip_item.png" id="4_odw8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ay1so"]
size = Vector2(353, 31)

[node name="Inventory_item" type="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 276.0
offset_bottom = 29.0
mouse_filter = 1
script = ExtResource("1_4kxu1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_right = 272.0
offset_bottom = 28.0
mouse_filter = 1
color = Color(0.392157, 0, 0, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 155.0
offset_bottom = 19.0
theme_override_constants/separation = 5

[node name="itemTexture" type="TextureRect" parent="ColorRect/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(16, 19)
layout_mode = 2
texture = ExtResource("2_cpvyn")
stretch_mode = 3

[node name="txtItemName" type="Label" parent="ColorRect/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "[item_name]"
vertical_alignment = 1

[node name="txtItemAmount" type="Label" parent="ColorRect/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "[amount]"
vertical_alignment = 1

[node name="btnDrop" type="Button" parent="ColorRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Drop"
mouse_filter = 1
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource("3_peubr")
icon_alignment = 2

[node name="btnEquip" type="Button" parent="ColorRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Equip"
mouse_filter = 1
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource("4_odw8j")
icon_alignment = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(176.5, 13.5)
shape = SubResource("RectangleShape2D_ay1so")

[connection signal="pressed" from="ColorRect/HBoxContainer/btnDrop" to="." method="_on_btn_drop_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/btnEquip" to="." method="_on_btn_equip_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
